--- a/tla2/index.html
+++ b/tla2/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo-title">
+        <span class="logo-title">
             <img src="SITESlogo.png" alt="SITES Logo" width="120" height="80">
             <span class="portfolio-title">Neill Laurence H. Amper<br><span class="subtitle">Portfolio</span></span>
-        </div>
-        <ul class="nav">
+        </span>
+        <ul class="hyperlinks">
             <li><a href="#">About Me</a></li>
             <li><a href="#">My Services</a></li>
             <li><a href="#">My Accomplishments</a></li> 
