--- a/tla2/index.html
+++ b/tla2/index.html
@@ -11,10 +11,13 @@
 </head>
 <body>
     <div class="header">
-        <span class="logo-title">
-            <img src="SITESlogo.png" alt="SITES Logo" width="120" height="80">
-            <span class="portfolio-title">Neill Laurence H. Amper<br><span class="subtitle">Portfolio</span></span>
-        </span>
+        <div class="logo-title">
+            <img src="SITESlogo.png" alt="SITES Logo" class="logo-img" width="120" height="80">
+            <div class="title-block">
+                <span class="portfolio-title">Neill Laurence H. Amper</span>
+                <span class="subtitle">Portfolio</span>
+            </div>
+        </div>
         <ul class="hyperlinks">
             <li><a href="#">About Me</a></li>
             <li><a href="#">My Services</a></li>
@@ -22,5 +25,10 @@
             <li><a href="#">Where to find me</a></li>
         </ul>
     </div>
+    <div class="content">
+        <img src="JamesProfile.jpg" alt="Profile Picture" class="profile-img" width="872" height="872">
+        <h1>Welcome to My Portfolio</h1>
+        <p>This is a brief introduction about myself and my work.</p>
+        <p>Feel free to explore the links above to learn more about me, my services, and my accomplishments.</p>
 </body>
 </html>
